<resources>
    <string-array name="lang_select">
        <item>@string/lang_english</item>
        <item>@string/lang_spanish</item>
        <item>@string/lang_vietnamese</item>
    </string-array>
    <string name="lang_english">English</string>
    <string name="lang_spanish">Spanish</string>
    <string name="lang_vietnamese">Vietnamese</string>
    <string name="lang_arabic" translatable="false">Arabic</string>
    <string name="lang_french" translatable="false">French</string>
    <string name="loading" translatable="false">Loading &#8230;</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="cancel">Cancel</string>
    <string name="description">description</string>
    <string name="app_name">Anonymous Alerts</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_logout">LogOut</string>
    <string name="action_send">Send</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="confirmation">Your Confirmation Code is :</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_glossary">Glossary: Terms</string>
    <string name="title_activity_send_report1">Step 1</string>
    <string name="Instruction">Below please submit suspicious activity, bullying or other student related issues to a school administrator(s). We encourage you to report important issues.</string>
    <string name="contact">*Person(s) to Contact:</string>
    <string name="building">*Building:</string>
    <string name="incident">*Report Incident Type:</string>
    <string name="location">Location:</string>
    <string name="priority">Priority:</string>
    <string name="message">*Report Incident:</string>
    <string name="submitter">Submitter Type:</string>
    <string name="title_activity_send_report2">Step 2</string>
    <string name="title_activity_send_report3">Step 3</string>
    <string name="Help_text">The Anonymous Alerts reporting service is used to submit suspicious activity, bullying or other student related issues to a school administrator(s).We encourage you to report important issues. Please do not use this app for issues requiring immediate assitance. If this is an emergency requiring immediate assistance, please call 911.</string>
    <string name="Help_text2">To be contacted anonymously by the school district</string>
    <string name="Help_text3">Or fill in your information below to reveal your identity</string>
    <string name="title_activity_photo">Media</string>
    <string name="takePictureButton">TAKE A PICTURE</string>
    <string name="selectPictureButton">Select an Image</string>
    <string name="takeVideoButton">RECORD A VIDEO</string>
    <string name="selectVideoButton">Select a Video</string>
    <string name="sendbtn">Upload</string>
    <string name="imageviewDescription" translatable="false">Here is your image</string>
    <string name="Help_text_final">Your message has been sent.Thank you for submitting your incident report to us When contacting the district</string>
    <string name="help">Help</string>
    <string name="Glossary">Glossary</string>
    <string name="SendBtn">Send Incident Report</string>
    <string name="SendFakeBtn">Send Incident Report</string>
    <string name="submitbtn">Submit</string>
    <string name="loginbtn">Log In</string>
    <string name="callbtn">Dial</string>
    <string name="notice">If this requires immediate assistance, please dial 911</string>
    <string name="Submit">Submit</string>
    <string name="done">Done</string>
    <string name="phone_format" translatable="false">000&#8211;000&#8211;0000</string>
    <string name="code_format" translatable="false">000000</string>
    <string name="priority_prompt">Choose a priority</string>
    <string name="TermDefiniton">Definition:</string>
    <string-array name="priority_arrays">
        <item>@string/normal</item>
        <item>@string/high</item>
    </string-array>
    <string name="high">High</string>
    <string name="title_activity_glossary_detail">Glossary: Definition</string>
    <string name="messageToSend">Type in a detailed incident message report</string>
    <string name="login">Setup/Login</string>
    <string name="password">Password </string>
    <string name="prompt_account">Setup/Login</string>
    <string name="email">Email </string>
    <string name="re_email">Confirm Email </string>
    <string name="full_name">Full Name</string>
    <string name="Enter_report" translatable="false">Enter your report </string>
    <string name="contact_prompt">Choose a building first</string>
    <string name="title_activity_abstract" translatable="false">AbstractActivity</string>
    <string name="title_activity_notifications">List of Push Notifications</string>
    <string name="title_activity_notifications_detail" translatable="false">Notification Detail</string>
    <string name="title_activity_locator" translatable="false">Locate Me</string>
    <string name="account" translatable="false">Loading ...</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Attach to Report</string>
    <string name="title_activity_send_report" translatable="false">SendReportActivity</string>
    <string name="label_full_name" translatable="false">Locating you ...</string>
    <string name="enter_name">Full name</string>
    <string name="enter_description">Please enter the description here</string>
    <string name="title_activity_locate_me_edit" translatable="false">My Identity</string>
    <string name="title_activity_locate_me_contact">Contact Manager</string>
    <string name="my_identity_lbl" translatable="false">My Identity</string>
    <string name="reveal_your_name_lbl">Reveal your name for Smart Button® use (optional)</string>
    <string name="add_your_picture_lbl" translatable="false">Add your picture</string>
    <string name="select_your_school_lbl">Select your school</string>
    <string name="add_incident_contacts_lbl" translatable="false">Add contacts  for Smart Button® use </string>
    <string name="add_social_media" translatable="false">Add social media</string>
    <string name="patent_notice" translatable="false">Powered by Anonymous Alerts® Patented (U.S. Patent No. 9,071,579)</string>
    <string name="title_activity_emergency_dial">Emergency Dial</string>
    <string name="title_activity_web_view">Helpful Links</string>
    <string name="title_activity_text" translatable="false">Help resource</string>
    <string name="title_activity_video">Video</string>
    <string name="action_submit">Submit</string>
    <string name="failed" translatable="false">Failed to show</string>
    <string name="title_activity_youtube" translatable="false">YouTube</string>
    <string name="school_type_colon">School Type:</string>
    <string name="smart_button" translatable="false">Smart Button®</string>
    <string name="language_setting">Language Setting</string>
    <string name="select_language">Select a language</string>
    <string name="glossary">Glossary</string>
    <string name="help_and_resources"><![CDATA[Help & Resources]]></string>
    <string name="emergency_dial">Emergency Dial</string>
    <string name="notifications">Notifications</string>
    <string name="please_wait">Please wait...</string>
    <string name="school">School</string>
    <string name="select_incident">-Select incident-</string>
    <string name="select_location">-Select location-</string>
    <string name="select_contact">-Select contact-</string>
    <string name="select_submitter">-Select Submitter-</string>
    <string name="select_category">-Select Category-</string>
    <string name="select_school_type">-Select School Type-</string>
    <string name="building_1">building</string>
    <string name="select">Select</string>
    <string name="required_field_missing">Required field missing</string>
    <string name="please_select_all_required">Please select all required</string>
    <string name="confirm_report_send">Confirm send report</string>
    <string name="confirm_report_send_2">Are you sure you want to send this report?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_message_center">My Message Center</string>
    <string name="disclaimer_text">Please describe the event (Be specific - include date, time, specific location, victim(s) and person(s) involved</string>
    <string name="home">Home</string>
    <string name="oops">Oops!</string>
    <string name="thank_you">Thank You!</string>
    <string name="if_emergency_call_911">If this is an emergency, please call 911</string>
    <string name="your_message_has_been_sent">Your message has been sent!</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="it_looks_like_you_re_trying_to_submit_a_report_outside_the_scheduled_monitoring_hours_of">It looks like you\'re trying to submit a report outside the scheduled monitoring hours of</string>
    <string name="otherwise_please_submit_your_report_during_the_next_scheduled_monitoring_time">Otherwise, please submit your report during the next scheduled monitoring time.</string>
    <string name="choose_building">-choose a building\n</string>
    <string name="choose_contact">-choose a contact\n</string>
    <string name="choose_incident">-choose an incident type\n</string>
    <string name="choose_location">-choose an location</string>
    <string name="enter_a_message">-enter a message\n</string>
    <string name="picture_upload">Picture Upload</string>
    <string name="photo_or_video">Would you like to submit a photo/screenshot or video ?</string>
    <string name="photo_or_screenshot">Would you like to submit a photo or a screenshot?</string>
    <string name="media_upload">Media Upload</string>
    <string name="upload_success">Upload is successful</string>
    <string name="upload_failed">Upload failed</string>
    <string name="step_2_info_missing">Your anonymous or non-anonymous info is missing</string>
    <string name="step_2_info_missing_2">Your anonymous or non-anonymous info is missing. It will help the recipient if you enter a way for them to contact you back. Do you want to go back or continue?</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="cancel_go_back">Cancel, go back</string>
    <string name="email_mistmatch">Email info mismatch</string>
    <string name="email_mismatch_2">Please make sure email matches confirmation</string>
    <string name="email_mismatch_3">make sure email matches confirmation</string>
    <string name="you_must">You must:</string>
    <string name="error_select_category">-choose an incident category and an incident type</string>
    <string name="code">Code:</string>
    <string name="incident_colon">Incident:</string>
    <string name="type_in_a_reply_message">Type in a reply message</string>
    <string name="send">Send</string>
    <string name="please_complete">Please complete the information below then submit your report. If this is an emergency call 911</string>
    <string name="remain_anonymous">remain anonymous</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="or_enter_a_10_digit_cell_phone_number">OR enter a 10 digit Cell Phone Number</string>
    <string name="quick_report_disclaimer">Please complete the information below then submit your report.\nIf this is an emergency call 911.</string>
    <string name="missing_email_phone">You must enter an email address or a valid 10-digit phone number</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="add_victim_accused">-Add Victim/Accused-</string>
</resources>