<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:showAsAction="never"-->
    <!--android:title="@string/action_settings" />-->



    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_logout" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/help"
        />
    <!--android:icon="@drawable/ic_help_white_24dp"-->

    <item
    android:id="@+id/action_change_language"
    android:orderInCategory="60"
    android:title="@string/language_setting"
    app:showAsAction="never"/>

</menu>