<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhotoActivity">


    <Button
        android:id="@+id/selectPictureButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPictureButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/btn_yellow"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectVideoButton"
        android:id="@+id/selectVideoButton"
        android:layout_below="@+id/selectPictureButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/btn_yellow"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@+id/selectVideoButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />


    <Button
        android:id="@+id/capturePictureBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePictureButton"
        android:layout_below="@+id/selectVideoButton"
        android:layout_alignRight="@+id/selectPictureButton"
        android:layout_alignEnd="@+id/selectPictureButton"
        android:layout_marginTop="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/recordVideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeVideoButton"
        android:layout_below="@+id/capturePictureBtn"
        android:layout_alignRight="@+id/selectVideoButton"
        android:layout_alignEnd="@+id/selectVideoButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/bitmap_imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/uploadBtn"
        android:contentDescription="@string/imageviewDescription"
        android:layout_below="@+id/recordVideButton" />


    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bitmap_imageView1"
        android:layout_alignParentBottom="true"
        android:text="@string/sendbtn"
        android:background="@color/btn_green"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />


</RelativeLayout>